tests/paczka1/small_fuzzy/77274038.err
Error in line 3: zgjfQ2J S619 78,6
Error in line 9: F9I8LbOiL6j A135 76,8
